prd_package/objects/Flight__c.object
<CustomObject>
    <fields>
        <fullName>ARR_FLT_FROM_del__c</fullName>
        <description>Displays the flight arriving with respect to the current user&apos;s station</description>
        <label>ARR FLT FROM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_LT_DateTime__c</fullName>
        <formula>DATETIMEVALUE( ATA_LT__c )</formula>
        <label>ATA LT DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ATA_LT__c</fullName>
        <label>ATA LT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_UTC_DateTime__c</fullName>
        <formula>DATETIMEVALUE( ATA_UTC__c )</formula>
        <label>ATA UTC DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ATA_UTC_Display__c</fullName>
        <formula>LPAD(
IF(LEFT(SUBSTITUTE(LEFT(RIGHT( ATA_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;),1) = &quot;0&quot;, MID
(
SUBSTITUTE(LEFT(RIGHT( ATA_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( ATA_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;)
)
), SUBSTITUTE(LEFT(RIGHT( ATA_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;))

, 5 , &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATA (UTC)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_UTC__c</fullName>
        <label>ATA UTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA__c</fullName>
        <description>Use this Field ATA display on page layout</description>
        <formula>IF(LEFT(SUBSTITUTE(LEFT(RIGHT( ATA_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;),1) = &quot;0&quot;, MID
(
SUBSTITUTE(LEFT(RIGHT( ATA_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( ATA_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;)
)
), SUBSTITUTE(LEFT(RIGHT( ATA_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;))</formula>
        <label>ATA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATD_LT_DateTime__c</fullName>
        <formula>DATETIMEVALUE( ATD_LT__c )</formula>
        <label>ATD LT DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ATD_LT__c</fullName>
        <label>ATD LT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATD_UTC_DateTime__c</fullName>
        <formula>DATETIMEVALUE( ATD_UTC__c )</formula>
        <label>ATD UTC DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ATD_UTC_Display__c</fullName>
        <formula>LPAD(
IF(LEFT(SUBSTITUTE(LEFT(RIGHT( ATD_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;),1) = &quot;0&quot;, MID
(
SUBSTITUTE(LEFT(RIGHT( ATD_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( ATD_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;)
)
), SUBSTITUTE(LEFT(RIGHT( ATD_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;))

, 5 , &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATD (UTC)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATD_UTC__c</fullName>
        <label>ATD UTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATD__c</fullName>
        <description>Used for display</description>
        <formula>IF(LEFT(SUBSTITUTE(LEFT(RIGHT( ATD_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;),1) = &quot;0&quot;, MID
(
SUBSTITUTE(LEFT(RIGHT( ATD_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( ATD_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;)
)
), SUBSTITUTE(LEFT(RIGHT( ATD_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;))</formula>
        <label>ATD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_C_Reg__c</fullName>
        <label>A/C Reg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Passengers__c</fullName>
        <label>Accepted Passengers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AircraftId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft Registration</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Flights</relationshipLabel>
        <relationshipName>Flights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft_Configuration_Business_Class__c</fullName>
        <description>Displays the maximum number of business class available seats in the aircraft</description>
        <label>Aircraft Configuration Business Class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aircraft_Configuration_Economy_Class__c</fullName>
        <description>Displays the maximum number of economy class available seats in the aircraft</description>
        <label>Aircraft Configuration Economy Class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aircraft_Configuration_First_Class__c</fullName>
        <description>Displays the maximum number of first class available seats in the aircraft</description>
        <label>Aircraft Configuration First Class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aircraft_Configuration_Premium_Economy__c</fullName>
        <description>Displays the maximum number of premium economy class available seats in the aircraft</description>
        <label>Aircraft Configuration Premium Economy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aircraft_Configuration__c</fullName>
        <label>Aircraft Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Description__c</fullName>
        <formula>AircraftId__r.Aircraft_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A/C Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Type__c</fullName>
        <label>Aircraft Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Code__c</fullName>
        <formula>IF(LEFT(Name, 2)==&apos;TG&apos;, &apos;TG&apos;, &apos;&apos;)</formula>
        <label>Airline Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Delay_DateTime__c</fullName>
        <formula>DATETIMEVALUE( Arrival_Delay__c )</formula>
        <label>Arrival Delay DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrival_Delay__c</fullName>
        <label>Arrival Delay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_STN_ICAO__c</fullName>
        <label>Arrival STN ICAO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_STN_Name__c</fullName>
        <label>Arrival STN Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_STN__c</fullName>
        <label>Arrival STN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Terminal__c</fullName>
        <label>Arrival Terminal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Time_UTC__c</fullName>
        <formula>IF( NOT(ISNULL(ATA_UTC_DateTime__c)), ATA_UTC_DateTime__c, IF( NOT(ISNULL(ETA_UTC_DateTime__c)), ETA_UTC_DateTime__c, STA_UTC_DateTime__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Time UTC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Available_Seat__c</fullName>
        <formula>IF(CONTAINS(Aircraft_Configuration__c, &apos;F&apos;), &apos;F&apos; &amp;
 IF((Aircraft_Configuration_First_Class__c - Booking_Passenger_First_Class__c) &lt; 0, (&apos;-&apos; &amp;
     LPAD(
     TEXT((Aircraft_Configuration_First_Class__c - Booking_Passenger_First_Class__c) * (-1)),
 2, &apos;0&apos;)),
     LPAD(
     TEXT(Aircraft_Configuration_First_Class__c - Booking_Passenger_First_Class__c),
 2, &apos;0&apos;)
    )
 , &apos;&apos;) &amp;
IF(CONTAINS(Aircraft_Configuration__c, &apos;C&apos;), &apos; C&apos; &amp;
 IF((Aircraft_Configuration_Business_Class__c - Booking_Passenger_Business_Class__c) &lt; 0, (&apos;-&apos; &amp;
     LPAD(
     TEXT((Aircraft_Configuration_Business_Class__c - Booking_Passenger_Business_Class__c) * (-1)),
 2, &apos;0&apos;)),
     LPAD(
     TEXT(Aircraft_Configuration_Business_Class__c - Booking_Passenger_Business_Class__c),
 2, &apos;0&apos;)
    )
 , &apos;&apos;) &amp;
IF(CONTAINS(Aircraft_Configuration__c, &apos;U&apos;), &apos; U&apos; &amp;
 IF((Aircraft_Configuration_Premium_Economy__c - Booking_Passenger_Premium_Economy_Class__c) &lt; 0, (&apos;-&apos; &amp;
     LPAD(
     TEXT((Aircraft_Configuration_Premium_Economy__c - Booking_Passenger_Premium_Economy_Class__c) * (-1)),
 2, &apos;0&apos;)),
     LPAD(
     TEXT(Aircraft_Configuration_Premium_Economy__c - Booking_Passenger_Premium_Economy_Class__c),
 2, &apos;0&apos;)
    )
 , &apos;&apos;) &amp;
IF(CONTAINS(Aircraft_Configuration__c, &apos;Y&apos;), &apos; Y&apos; &amp;
 IF((Aircraft_Configuration_Economy_Class__c - Booking_Passenger_Economy_Class__c) &lt; 0, (&apos;-&apos; &amp;
     LPAD(
     TEXT((Aircraft_Configuration_Economy_Class__c - Booking_Passenger_Economy_Class__c) * (-1)),
 3, &apos;0&apos;)),
     LPAD(
     TEXT(Aircraft_Configuration_Economy_Class__c - Booking_Passenger_Economy_Class__c),
 3, &apos;0&apos;)
    )
 , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Seat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAY_ARR_DEP__c</fullName>
        <label>BAY ARR/DEP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAY__c</fullName>
        <formula>BAY_ARR_DEP__c</formula>
        <label>BAY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Belt__c</fullName>
        <label>Belt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Time_DateTime__c</fullName>
        <formula>DATETIMEVALUE( Block_Time__c )</formula>
        <label>Block Time DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Block_Time__c</fullName>
        <description>Displays actual flying time in units of minutes</description>
        <label>Block Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Passenger_Business_Class__c</fullName>
        <description>Displays the number of business class available seats in the aircraft</description>
        <label>Booking Passenger Business Class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Passenger_Economy_Class__c</fullName>
        <description>Displays the number of economy class available seats in the aircraft</description>
        <label>Booking Passenger Economy Class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Passenger_First_Class__c</fullName>
        <description>Displays the number of first class available seats in the aircraft</description>
        <label>Booking Passenger First Class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Passenger_Premium_Economy_Class__c</fullName>
        <description>Displays the number of premium economy class available seats in the aircraft</description>
        <label>Booking Passenger Premium Economy Class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Passengers__c</fullName>
        <description>Used for display</description>
        <label>Booking Passengers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cabin_Version__c</fullName>
        <formula>AircraftId__r.Cabin_Ver__c</formula>
        <label>Cabin Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Amount__c</fullName>
        <label>Case Amount (Clarify)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Flight_Date_LT__c</fullName>
        <description>Displays the changed flight date in local time</description>
        <label>Change Flight Date LT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Flight_Date_UTC__c</fullName>
        <description>Displays the changed flight date in UTC time</description>
        <label>Change Flight Date UTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Flight_Number__c</fullName>
        <description>Displays the changed flight number</description>
        <label>Change Flight Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codeshare__c</fullName>
        <label>Codeshare</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEP_FLT_TO_del__c</fullName>
        <label>DEP FLT TO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delay_Mins__c</fullName>
        <label>Delay Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Departed__c</fullName>
        <description>STD_UTC_DateTime__c &lt; NOW()</description>
        <formula>Departure_Time_UTC__c  &lt; NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Departed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Departure_Delay_DateTime__c</fullName>
        <formula>DATETIMEVALUE( Departure_Delay__c )</formula>
        <label>Departure Delay DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departure_Delay__c</fullName>
        <label>Departure Delay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_STN_ICAO__c</fullName>
        <label>Departure STN ICAO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_STN_Name__c</fullName>
        <label>Departure STN Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_STN__c</fullName>
        <description>Used for display</description>
        <label>Departure STN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Terminal__c</fullName>
        <label>Departure Terminal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Time_UTC__c</fullName>
        <formula>IF(NOT(ISNULL(ATD_UTC_DateTime__c)), ATD_UTC_DateTime__c, IF(NOT(ISNULL(ETD_UTC_DateTime__c)), ETD_UTC_DateTime__c, STD_UTC_DateTime__c) )</formula>
        <label>Departure Time UTC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <description>Displays the flight departing with respect to the current user&apos;s station</description>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETA_LT_DateTime__c</fullName>
        <formula>DATETIMEVALUE( ETA_LT__c )</formula>
        <label>ETA LT DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ETA_LT__c</fullName>
        <label>ETA LT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETA_UTC_DateTime__c</fullName>
        <formula>DATETIMEVALUE( ETA_UTC__c )</formula>
        <label>ETA UTC DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ETA_UTC_Display__c</fullName>
        <description>Estimated Time of Arrival (UTC)</description>
        <formula>LPAD(
IF(LEFT(SUBSTITUTE(LEFT(RIGHT( ETA_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;),1) = &quot;0&quot;, MID
(
SUBSTITUTE(LEFT(RIGHT( ETA_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( ETA_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;)
)
), SUBSTITUTE(LEFT(RIGHT( ETA_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;))

, 5 , &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETA (UTC)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETA_UTC__c</fullName>
        <description>Estimated Time of Arrival</description>
        <label>ETA UTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <description>Estimated Time of Arrival</description>
        <formula>IF(LEFT(SUBSTITUTE(LEFT(RIGHT( ETA_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;),1) = &quot;0&quot;, MID
(
SUBSTITUTE(LEFT(RIGHT( ETA_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( ETA_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;)
)
), SUBSTITUTE(LEFT(RIGHT( ETA_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;))</formula>
        <label>ETA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETD_ETA__c</fullName>
        <formula>ETD__c &amp; &quot; / &quot; &amp; ETA__c</formula>
        <label>ETD / ETA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETD_LT_DateTime__c</fullName>
        <formula>DATETIMEVALUE( ETD_LT__c )</formula>
        <label>ETD LT DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ETD_LT__c</fullName>
        <label>ETD LT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETD_UTC_DateTime__c</fullName>
        <formula>DATETIMEVALUE( ETD_UTC__c )</formula>
        <label>ETD UTC DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ETD_UTC_Display__c</fullName>
        <formula>LPAD(
IF(LEFT(SUBSTITUTE(LEFT(RIGHT( ETD_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;),1) = &quot;0&quot;, MID
(
SUBSTITUTE(LEFT(RIGHT( ETD_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( ETD_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;)
)
), SUBSTITUTE(LEFT(RIGHT( ETD_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;))

, 5 , &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETD (UTC)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETD_UTC__c</fullName>
        <label>ETD UTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETD__c</fullName>
        <description>Estimated Time of Departure</description>
        <formula>IF(LEFT(SUBSTITUTE(LEFT(RIGHT( ETD_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;),1) = &quot;0&quot;, MID
(
SUBSTITUTE(LEFT(RIGHT( ETD_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( ETD_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;)
)
), SUBSTITUTE(LEFT(RIGHT( ETD_LT__c , 8), 5), &quot;:&quot;, &quot;.&quot;))</formula>
        <label>ETD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Leg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Leg</label>
        <referenceTo>Flight__c</referenceTo>
        <relationshipLabel>Flights</relationshipLabel>
        <relationshipName>Flights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flight_Area__c</fullName>
        <label>Flight Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Cancel_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays whether flight is cancelled</description>
        <label>Flight Cancel Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flight_Change_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays whether flight is changed</description>
        <label>Flight Change Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flight_Date_F__c</fullName>
        <formula>IF( Flight_Date_LT__c = &quot;&quot;, &quot;&quot;, 
RIGHT( Flight_Date_LT__c , 2) + &quot;/&quot; + MID( Flight_Date_LT__c , 6, 2) + &quot;/&quot; + LEFT( Flight_Date_LT__c , 4) 
)</formula>
        <label>Flight Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Date_LT_F__c</fullName>
        <formula>DATEVALUE( Flight_Date_LT__c )</formula>
        <label>Flight Date LT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_Date_LT__c</fullName>
        <description>Used for display</description>
        <label>Flight Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Date_UTC_F__c</fullName>
        <formula>DATEVALUE( Flight_Date_UTC__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Date UTC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_Date_UTC__c</fullName>
        <description>Should save the data like :16OCT16 instead of 2016-10-16, Trigger do convert 10OCT16 to 2016-10-16 automatically.</description>
        <label>Flight Date UTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Date__c</fullName>
        <description>Used for input when creating new Flights</description>
        <label>Flight Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Flight External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flight_Master__c</fullName>
        <description>Flight Master used for group LEG by the same flight date and flight number, Example data = TG676_16OCT16</description>
        <externalId>true</externalId>
        <label>Flight Master</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number__c</fullName>
        <description>Data format :TG999</description>
        <label>Flight Numbers</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Region__c</fullName>
        <label>Flight Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Remark__c</fullName>
        <description>Displays the extra information on the flight</description>
        <label>Flight Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flying_Elapsed_Time_HH_MM__c</fullName>
        <description>Displays the flying time in a HH:MM format</description>
        <formula>LEFT( Flying_Time_Elapsed_Time__c , 2)  &amp; &quot;:&quot; &amp; RIGHT ( Flying_Time_Elapsed_Time__c , 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flying Elapsed Time (HH:MM)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flying_Time_Elapsed_Time__c</fullName>
        <description>Displays the flying time in an hour format</description>
        <inlineHelpText>HH:MM</inlineHelpText>
        <label>Flying Time (Elapsed Time)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gate__c</fullName>
        <label>Gate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_CFMS__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Displays whether the flight is a flight created by CFMS</description>
        <label>IS CFMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Source__c</fullName>
        <label>Integration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Irregularity_Handling__c</fullName>
        <label>Irregularity Handling</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Matching_User_Preference__c</fullName>
        <formula>IF(
(CONTAINS($User.Station__c, Departure_STN__c) || CONTAINS($User.Station__c, Arrival_STN__c)) &amp;&amp;
(CONTAINS($User.A_C_REG__c, AircraftId__r.Name)) ||
(CONTAINS($User.A_C_Type__c, AircraftId__r.Aircraft_Type__c)
 ) , 
TRUE, 
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Matching User Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Port_Equals_to_Bay__c</fullName>
        <formula>IF( Departure_STN__c = $User.Port__c || Arrival_STN__c = $User.Port__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Port Equals to Bay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landed__c</fullName>
        <formula>Arrival_Time_UTC__c &lt; NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Landed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Job_Name__c</fullName>
        <label>Last Sync Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Time__c</fullName>
        <label>Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Leg_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used for display</description>
        <label>Leg Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenace_Case_Report__c</fullName>
        <formula>HYPERLINK(
Report__c ,
&apos;View&apos;,
&quot;_parent&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenace Case Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Station_F__c</fullName>
        <formula>IF( Departure_STN__c =  $User.Station__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Station</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Flight_Number__c</fullName>
        <label>Next Flight Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Flight_STD_LT_DateTime__c</fullName>
        <formula>DATETIMEVALUE( Next_Flight_STD_LT__c )</formula>
        <label>Next Flight STD LT DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Flight_STD_LT__c</fullName>
        <label>Next Flight STD LT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Flight_STD_UTC_DateTime__c</fullName>
        <formula>DATETIMEVALUE( Next_Flight_STD_UTC__c )</formula>
        <label>Next Flight STD UTC DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Flight_STD_UTC__c</fullName>
        <label>Next Flight STD UTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Cabin_Crew__c</fullName>
        <label>Number of Cabin Crew</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Cockpit_Crew__c</fullName>
        <label>Number of Cockpit Crew</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Extra_Crew__c</fullName>
        <label>Number of Extra Crew</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_GE__c</fullName>
        <label>Number of GE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Passive_Crew__c</fullName>
        <label>Number of Passive Crew</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Used for display</description>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_Booked_Amount_txt__c</fullName>
        <label>Over Booked Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Flight_Date_LT__c</fullName>
        <label>Previous Flight Date LT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Flight_Date_UTC__c</fullName>
        <label>Previous Flight Date UTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Flight_External_Id__c</fullName>
        <label>Previous Flight External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Flight_Master__c</fullName>
        <label>Previous Flight Master</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Flight_Number__c</fullName>
        <label>Previous Flight Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPT_Next2Day__c</fullName>
        <formula>IF(
OR(
(Flight_Date_LT_F__c - 1 = TODAY()) &amp;&amp; (STD_LT_DateTime__c &gt;= DATETIMEVALUE(LEFT(STD_LT__c , 10) &amp; &apos; 05:00:00&apos;)),
(Flight_Date_LT_F__c - 2 = TODAY()) &amp;&amp; (STD_LT_DateTime__c &lt;= DATETIMEVALUE(LEFT(STD_LT__c , 10) &amp; &apos; 05:00:00&apos;))
)
,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPT Next2Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <description>Unused

&quot;00ON0000000LsvD?pv0=Text(Maintenance,New+Maintenance)&amp;pv1=&apos; + AircraftId__r.Name</description>
        <formula>&quot;/00ON0000000LsvD?pv0=&quot; &amp; &quot;012N000000053Q2, 012N000000055m5&amp;pv1=&quot; +    AircraftId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenace Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing__c</fullName>
        <description>Used for display</description>
        <externalId>true</externalId>
        <label>Routing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSR_Report_Date_Arrival__c</fullName>
        <formula>IF( 
   ((STA_LT_DateTime__c - 3) &lt;= NOW()) &amp;&amp; 
   ((STA_LT_DateTime__c - 2) &gt;= NOW())
, TRUE, FALSE)</formula>
        <label>SSR Report Date Arrival</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSR_Report_Date__c</fullName>
        <formula>IF( 
   ((STD_LT_DateTime__c - 3) &lt;= NOW()) &amp;&amp; 
   ((STD_LT_DateTime__c - 2) &gt;= NOW())
, TRUE, FALSE)</formula>
        <label>SSR Report Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STA_LT_DateTime__c</fullName>
        <formula>DATETIMEVALUE( STA_LT__c )</formula>
        <label>STA LT DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>STA_LT_Datetime_F__c</fullName>
        <formula>MID(STA_LT__c , 9, 2) + &apos;/&apos; + 
MID(STA_LT__c, 6, 2) + &apos;/&apos; + 
MID(STA_LT__c, 1, 4) + &apos; &apos; + 
MID(STA_LT__c, 12, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STA LT (Datetime)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STA_LT__c</fullName>
        <label>STA LT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STA_UTC_DateTime__c</fullName>
        <formula>DATETIMEVALUE( STA_UTC__c )</formula>
        <label>STA UTC DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>STA_UTC_Display__c</fullName>
        <formula>LPAD(
IF(LEFT(SUBSTITUTE(LEFT(RIGHT( STA_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;),1) = &quot;0&quot;, MID
(
SUBSTITUTE(LEFT(RIGHT( STA_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( STA_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;)
)
), SUBSTITUTE(LEFT(RIGHT( STA_UTC__c , 8), 5), &quot;:&quot;, &quot;:&quot;))

, 5 , &quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STA (UTC)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STA_UTC__c</fullName>
        <label>STA UTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>